--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <script id="sharedShaderCode" type="x-shader/x-fragment">
 int getParticleIndex(vec2 uv, vec2 size) {
-    ivec2 coord = ivec2(floor(uv*size));
+    ivec2 coord = ivec2(floor(uv*size+0.5));
     return coord.x + int(size.x) * coord.y;
 }
 vec2 getParticleUV(float particleIndex, vec2 res){
@@ -26,14 +26,15 @@ vec3 worldPosToGridPos(vec3 particlePos, vec3 gridPos, vec3 cellSize, vec3 gridR
 }
 // Convert grid position to UV coord in the grid texture
 vec2 gridPosToGridUV(vec3 gridPos, int subIndex, vec3 gridRes){
-    vec2 gridTexRes = gridRes.xy * vec2(1, gridRes.z);
-    vec2 gridUV = gridPos.xy / gridTexRes;
+    gridPos = clamp(gridPos, vec3(0), gridRes-1.0); // Keep within limits
+    vec2 gridTexRes = 2.0 * gridRes.xy * vec2(1, gridRes.z);
+    vec2 gridUV = 2.0 * gridPos.xy / gridTexRes;
     gridUV.y += gridPos.z/gridRes.z; // Move up to correct z section
     // Choose sub pixel
     float fSubIndex = float(subIndex);
-    gridUV += vec2(mod(fSubIndex,2.0), fSubIndex/2.0) / gridTexRes;
-    gridUV += vec2(0.5)/gridTexRes; // Move to center of pixel
-    return gridUV; // Center to -1..1
+    gridUV += 2.0*vec2(mod(fSubIndex,2.0), fSubIndex/2.0) / gridTexRes;
+    gridUV += vec2(1)/gridTexRes; // Move to center of pixel
+    return gridUV;
 }
 </script>
 <script id="vertexShader" type="x-shader/x-vertex">
@@ -88,21 +89,24 @@ void main() {
     // Get id and position of current
     vec3 position = texture2D(posTex, uv).xyz;
     vec3 velocity = texture2D(velTex, uv).xyz;
+    vec3 particleGridPos = worldPosToGridPos(position, gridPos, cellSize, gridResolution);
+
     vec3 force = gravity;
+    ivec3 iGridRes = ivec3(gridResolution);
 
     // Neighbor collisions
     for(int i=-1; i<2; i++){
         for(int j=-1; j<2; j++){
             for(int k=-1; k<2; k++){
-                vec3 cellWorldPos = position + vec3(i,j,k)*cellSize;
-                vec3 gridPos = worldPosToGridPos(cellWorldPos, gridPos, cellSize, gridResolution);
+                vec3 neighborCellGridPos = particleGridPos + vec3(i,j,k);
+                ivec3 iNeighborCellGridPos = ivec3(particleGridPos) + ivec3(i,j,k);
                 for(int l=0; l<4; l++){
-                    vec2 neighborCellTexUV = gridPosToGridUV(gridPos, l, gridResolution);
-                    int neighborIndex = int(floor(texture2D(gridTex, neighborCellTexUV).x-1.0)); // indices are stored incremented by 1
+                    vec2 neighborCellTexUV = gridPosToGridUV(neighborCellGridPos, l, gridResolution);
+                    int neighborIndex = int(floor(texture2D(gridTex, neighborCellTexUV).x-1.0 + 0.5)); // indices are stored incremented by 1
                     vec2 neighborUV = getParticleUV(float(neighborIndex), resolution);
                     vec3 neighborPosition = texture2D(posTex, neighborUV).xyz;
                     vec3 neighborVelocity = texture2D(velTex, neighborUV).xyz;
-                    if(neighborIndex >=0 && neighborIndex != particleIndex){ // Not self!
+                    if(neighborIndex >=0 && neighborIndex != particleIndex && iNeighborCellGridPos.x>=0 && iNeighborCellGridPos.y>=0 && iNeighborCellGridPos.z>=0 && iNeighborCellGridPos.x<iGridRes.x && iNeighborCellGridPos.y<iGridRes.y && iNeighborCellGridPos.z<iGridRes.z){ // Not self!
                         // Apply contact force from neighbor
                         vec3 r = position - neighborPosition;
                         float len = length(r);
@@ -119,8 +123,8 @@ void main() {
     }
 
     // Apply force from ground / bounds?
-    vec3 boxMax = vec3(0.9);
-    vec3 boxMin = vec3(0.1);
+    vec3 boxMax = vec3(1.0);
+    vec3 boxMin = vec3(0.0);
     if(position.x - radius < boxMin.x){
         float x = position.x - radius;
         float x0 = boxMin.x;
@@ -151,12 +155,10 @@ void main() {
         float x0 = boxMax.z;
         force.z -= stiffness * (x - x0) + damping * velocity.z;
     }
-
     gl_FragColor = vec4(force, 0.0);
 }
 </script>
 <script id="updateVelocityFrag" type="x-shader/x-fragment">
-uniform sampler2D posTex;
 uniform sampler2D velTex;
 uniform sampler2D forceTex;
 uniform float deltaTime;
@@ -165,8 +167,8 @@ void main() {
     vec2 uv = gl_FragCoord.xy / resolution.xy;
     vec4 velocity = texture2D(velTex, uv);
     vec4 force = texture2D(forceTex, uv);
-    float invMass = velocity.w;
-    gl_FragColor = vec4(velocity.xyz + force.xyz * deltaTime * invMass, invMass);
+    //float invMass = velocity.w;
+    gl_FragColor = vec4(velocity.xyz + force.xyz * deltaTime, 1.0);
 }
 </script>
 <script id="updatePositionFrag" type="x-shader/x-fragment">
