--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ vec2 gridPosToGridUV(vec3 gridPos, int subIndex, vec3 gridRes){
     gridPos = clamp(gridPos, vec3(0), gridRes-1.0); // Keep within limits
     vec2 gridTexRes = 2.0 * gridRes.xy * vec2(1, gridRes.z);
     vec2 gridUV = 2.0 * gridPos.xy / gridTexRes;
-    gridUV.y += gridPos.z/gridRes.z; // Move up to correct z section
+    gridUV.y += gridPos.z / gridRes.z; // Move up to correct z section
     // Choose sub pixel
     float fSubIndex = float(subIndex);
-    gridUV += 2.0*vec2(mod(fSubIndex,2.0), fSubIndex/2.0) / gridTexRes;
-    gridUV += vec2(1)/gridTexRes; // Move to center of pixel
+    gridUV += vec2(mod(fSubIndex,2.0), fSubIndex/2.0) / gridTexRes;
+    //gridUV += vec2(1)/gridTexRes; // Move to center of pixel
     return gridUV;
 }
 </script>
@@ -62,6 +62,7 @@ void main() {
     // Get particle cell position
     vec3 cellPos = worldPosToGridPos(particlePos, gridPos, cellSize, gridResolution);
     vec2 gridUV = gridPosToGridUV(cellPos, 0, gridResolution);
+    gridUV += vec2(0.5) / (gridResolution.xy * vec2(1,gridResolution.z));// center to cell
     gl_PointSize = 2.0; // Cover 4 pixels in the grid texture
     gl_Position = vec4(2.0*(gridUV-0.5), 0, 1);
 }
@@ -102,6 +103,7 @@ void main() {
                 ivec3 iNeighborCellGridPos = ivec3(particleGridPos) + ivec3(i,j,k);
                 for(int l=0; l<4; l++){
                     vec2 neighborCellTexUV = gridPosToGridUV(neighborCellGridPos, l, gridResolution);
+                    neighborCellTexUV += vec2(0.5) / (4.0 * gridResolution.xy * vec2(1,gridResolution.z)); // center to pixel
                     int neighborIndex = int(floor(texture2D(gridTex, neighborCellTexUV).x-1.0 + 0.5)); // indices are stored incremented by 1
                     vec2 neighborUV = getParticleUV(float(neighborIndex), resolution);
                     vec3 neighborPosition = texture2D(posTex, neighborUV).xyz;
@@ -123,8 +125,8 @@ void main() {
     }
 
     // Apply force from ground / bounds?
-    vec3 boxMax = vec3(1.0);
-    vec3 boxMin = vec3(0.0);
+    vec3 boxMax = vec3(0.8);
+    vec3 boxMin = vec3(0.2);
     if(position.x - radius < boxMin.x){
         float x = position.x - radius;
         float x0 = boxMin.x;
