--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ void main() {
     }
 
     // Apply force from ground / bounds?
-    vec3 boxMax = vec3(0.9);
-    vec3 boxMin = vec3(0.1);
+    vec3 boxMax = vec3(0.7);
+    vec3 boxMin = vec3(0.3);
     if(position.x - radius < boxMin.x){
         float x = position.x - radius;
         float x0 = boxMin.x;
@@ -169,16 +169,22 @@ void main() {
         float x0 = boxMax.x;
         force.x -= stiffness * (x - x0) + damping * velocity.x;
     }
-    if(position.y + radius > boxMax.y){
+    /*if(position.y + radius > boxMax.y){
         float x = position.y + radius;
         float x0 = boxMax.y;
         force.y -= stiffness * (x - x0) + damping * velocity.y;
-    }
+    }*/
     if(position.z + radius > boxMax.z){
         float x = position.z + radius;
         float x0 = boxMax.z;
         force.z -= stiffness * (x - x0) + damping * velocity.z;
     }
+
+    if(length(position - vec3(0.5,0.3,0.5)) < 0.07){
+        force.y += 50.0;
+    }
+
+    force -= 0.3 * velocity;
 
     gl_FragColor = vec4(force, 0.0);
 }
